--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -188,4 +188,12 @@
     description = {Cualidades y comportamentos no técnicos, que describen el trabajo de una persona}
 }
 
+\newglossaryentry{mrgngnnc}{
+    name = Márgen de Ganancias,
+    sort = {margen},
+    description = {Porcentaje que indica cuántos centavos/pesos de ganancia se generaron por cada dólar de venta}
+}
+
+
+
 \glsaddallunused
