--- a/notes/tools.tex
+++ b/notes/tools.tex
@@ -53,7 +53,7 @@ Las hojas de cálculo contienen funcionalidades incorporadas, y SQL es útil en 
         \item {\textbf{Meta Métrica} : Meta propuesta por una compañía que puede ser medida y evaluada de acuerdo a métricas}
         \item {\textit{Ejemplo} : Retorno de Inversión = $\frac{Ganancia Neta}{Costo de Inversión}$}
     \end{itemize}}
-    \item {\textbf{\textit{Pivot Table} - Tabla Pivote} : Utilizado en el procesamiento de datos, permite resumir, ordenar y reorganizar datos en un DB, para realizar cálculos como promedios o cantidades totales}
+    \item {\textbf{\textit{Pivot Table} - Tabla Pivote} : Utilizado en el procesamiento de datos, permite resumir, ordenar y reorganizar datos en un DB, para realizar cálculos como promedios o cantidades totales. Se generan \textit{campos calculados}, que llevan a cabo ciertos cálculos en base a los valores de otros campos}
 \end{itemize}
 
 \subsubsection{\textit{Report} - Informes}
