starting with share-visualization

--- a/notes/main.tex
+++ b/notes/main.tex
@@ -72,6 +72,7 @@
 \input{prepare}
 \input{process}
 \input{analyze}
+\input{share}
 \input{fases_add}
 \input{otros_f_add}
 %\input{example} Ejemplo, se puede borrar
