--- a/notes/statistics.tex
+++ b/notes/statistics.tex
@@ -14,6 +14,7 @@
     \item [Significancia Estadística]{ : Determinación sobre la posibilidad de que el resultado se base en posibilidades aleatorias. \textit{A mayor significancia, menor es la probabilidad}. También llamado \textbf{Poder Estadístico}} 
     \item [Testeo de Hipótesis]{ : Pruebas para verificar si una encuesta o experimento entrega resultados válidos}
     \item [Tasa de Respuesta Estimada]{ : Porcentaje esperado de respuestas válidas a una encuesta, prueba o estudio}
+    \item [Correlación]{ : mención del grado en que dos variables se mueven una en relación con la otra (un patrón) o entre si (positiva, negativa). \textit{No implica \textbf{Causalidad} : un episodio lleva directamente a un resultado específico}}
 \end{description}
 
 \paragraph{Planificación de Tamaños de Muestra}
