brief cleanup, reordering info

--- a/notes/ciclo_datos.tex
+++ b/notes/ciclo_datos.tex
@@ -1,7 +1,9 @@
 \section{Ciclo de Vida de los Datos}
+Los \textbf{datos} son un conjunto de hechos, y tienen su propio \textbf{ciclo de vida} independiente del proceso de análisis. El \textbf{ecosistema de datos} corresponde a todos los elementos que interactúan entre si para producir, administrar, almacenar, organizar, analizar y compartir datos, \textit{incluyendo software y hardware}
 
-\textit{No confundir con análisis, solamente datos}
+La \textbf{toma de decisiones inspirada en datos} implica utilizar estos hechos como la guía del \gls{probemp}, aunque nunca serán más poderosos que su combinación con experiencia humana, observación e intuición. Además, se deben explorar fuentes diversas de datos para encontrar similitudes entre ellas
 
+\paragraph{Fases del Ciclo}
 \begin{itemize}
     \item {\textbf{\textit{Planning} - Planificación} :
     \begin{itemize}
