--- a/notes/class.tex
+++ b/notes/class.tex
@@ -1,102 +1,54 @@
 \section{Clasificación de Datos}
+
+\subsection{\textit{Metadata} - Metadatos}
+Los metadatos son datos sobre los datos de una hoja de cálculo o DB, y permiten interpretar su contenido. Como forma de \gls{dtgvrnnc}, se almacenan en una ubicación central (como un \textbf{repositorio de \textit{metadata}}) de forma física o virtual. Actúan como una fuente única y verídica de información consistente, uniforme y de acceso estandarizado. Los tipos más comunes son
+\begin{description}
+        \item {\textbf{Descriptivo} : Describe los datos, y puede utilizarse para identificarlos a futuro. \textit{títulos, descripciones, etiquetas, categorías}}
+        \item {\textbf{Estructural} : Indica cómo un grupo de datos se organiza, y si es que pertenece (o no) a una o más recolecciones de datos. \textit{estructura de datos, estado, ubicación, flujo}}
+        \item {\textbf{Administrativo} : Indica la fuente técnica de una propiedad u objeto digital. \textit{versión, propietarios o usuarios, permisos de acceso y edición}}
+\end{description}
+
 \subsection{Por Objetividad y Capacidad de Medición}
-\begin{itemize}
-    \item{\textbf{Cuantitativos} : Cuentan con hechos numéricos, medidas específicas y objetivas. \textit{Qué cosas, cuántas, qué tan seguido?} Se subdividen en dos tipos:
-    \begin{itemize}
-        \item{\textbf{Discretos} : Son cuantificables y tienen un número limitado de valores}
-        \item{\textbf{Contínuos} : Se miden y pueden tener casi cualquier valor numérico}
-    \end{itemize}}
-    \item{\textbf{Cualitativos} : Medidas subjetivas o explanatorias para cualidades y características. \textit{Por qué? Cómo?} Estos datos también se dividen en
-    \begin{itemize}
-        \item{\textbf{Nominal} : No presentan estructura o secuencia aparente}
-        \item{\textbf{Ordinal} : Pueden ordenarse en base a características}
-    \end{itemize}}
-\end{itemize}
-
-\subsection{Por Cercanía a sus Fuentes}
-\begin{itemize}
-    \item {\textbf{\textit{$1^{\text{st}}$ party data} - de Primera Fuente} : Datos recolectados por un individuo o grupo, utilizando recursos propios}
-    \item {\textbf{\textit{$2^{\text{nd}}$ party data} - de Segunda Fuente} : Datos recolectados por un grupo, directamente desde su audiencia, y que luego se venden}
-    \item {\textbf{\textit{$3^{\text{rd}}$ party data} - de Tercera Fuente} : Datos recolectados desde fuentes externas, que no los capturaron directamente}
-\end{itemize}
-
-\subsection{Por Ubicación}
-\begin{itemize}
-    \item {\textbf{Internos} : Datos que viven dentro de los sistemas de la compañía o empresa}
-    \item {\textbf{Externos} : Datos que viven o son generados fuera de la organización}
-\end{itemize}
+\begin{description}
+    \item{\textbf{Cuantitativos} : Son hechos numéricos, medidas específicas y objetivas. \textit{Qué cosas, cuántas, qué tan seguido?} Se subdividen en \textbf{discretos} (cuantificables, número limitado de valores) y \textbf{contínuos} (se miden y pueden tener casi cualquier valor numérico)}
+    \item{\textbf{Cualitativos} : Son explicaciones subjetivas de cualidades y características. \textit{Por qué? Cómo?} Se subdividen en \textbf{nominal} (no presentan estructura o secuencia aparente) y \textbf{ordinal} (pueden ordenarse en base a alguna característica)}
+\end{description}
 
 \subsection{Por Nivel de Organización}
-\begin{itemize}
-    \item {\textbf{Estructurados} : Corresponden a datos definidos, a menudo \textbf{cuantitativos}, organizados en formatos específicos como filas y columnas. Son fáciles de ordenar, buscar y analizar. \textit{Ejemplos : registros telefónicos, Excel, DB SQL}}
-    \item {\textbf{No Estructurados} : Datos variados, a menudo \textbf{cualitativos}, que no muestran alguna manera fácil de organizar. Proporcionan libertad de análisis, pero son más difíciles de buscar. \textbf{Representan la mayoría de los datos en el mundo.} \textit{Ejemplos : DB NOSQL, SMS, fotos y videos, archivos}}
-\end{itemize}
+\begin{description}
+    \item {\textbf{Estructurados} : Son definidos, a menudo \textbf{cuantitativos}, organizados en formatos específicos como filas y columnas. Fáciles de ordenar y buscar. \textit{ej : registros telefónicos, Excel, DB SQL}}
+    \item {\textbf{No Estructurados} : Son variados, a menudo \textbf{cualitativos}, que no muestran algún orden o patrón aparente. Entregan libertad de análisis, pero son más difíciles de buscar. \textbf{Representan la mayoría de los datos en el mundo.} \textit{ej : DB NOSQL, SMS, fotos y videos, archivos}}
+\end{description}
+
+\subsection{Por Ubicación}
+\begin{description}
+    \item {\textbf{Internos} : Viven dentro de los sistemas de la compañía o empresa}
+    \item {\textbf{Externos} : Viven o son generados fuera de la organización}
+\end{description}
+
+\subsection{Por Cercanía a sus Fuentes}
+\begin{description}
+    \item {\textbf{\textit{$1^{\text{st}}$ party data} - 1° Fuente} : Recolectados por un individuo o grupo, con recursos propios}
+    \item {\textbf{\textit{$2^{\text{nd}}$ party data} - 2° Fuente} : Recolectados directamente por un grupo desde su audiencia, y que luego se venden}
+    \item {\textbf{\textit{$3^{\text{rd}}$ party data} - 3° Fuente} : Recolectados desde fuentes externas, que no los capturaron directamente}
+\end{description}
+
+
 
 \subsection{Por Formato}
-\begin{itemize}
-    \item {\textbf{\textit{Wide Data} - Formato Ancho} : Cada elemento de dato tiene un solo registro o fila, con múltiples campos que contienen los valores para sus atributos. Preferir cuando
-    \begin{itemize}
-        \item {Se crean tablas o gráficos con pocas variables sobre cada tema}
-        \item {Se comparan gráficos lineales sencillos}
-    \end{itemize}}
-    \item {\textbf{\textit{Long Data} - Formato Corto} : Cada registro se relaciona con un valor por atributo, así que cada elemento tendrá datos a través de múltiples registros. Preferir cuando
-    \begin{itemize}
-        \item {Se almacenan muchas variables sobre cada tema}
-        \item {Se realizan análisis estadísticos avanzados o gráficos}
-    \end{itemize}}
-\end{itemize}
+\begin{description}
+    \item {\textbf{\textit{Wide Data} - Formato Ancho} : Cada elemento de dato refiere a un solo registro o fila, y las columnas o campos contienen sus atributos. \textit{Preferir para tablas o gráficos con pocas variables, o comparar gráficos lineales simples}}
+    \item {\textbf{\textit{Long Data} - Formato Corto} : Cada registro se relaciona con un valor específico, así que las variaciones de un atributo se dividirán en múltiples registros. \textit{Preferir cuando se almacenan muchas variables, o se realizan análisis o gráficos estadísticos más avanzados}}
+\end{description}
 
 \subsection{Por Tamaño}
-\begin{itemize}
-    \item {\textbf{\textit{Small Data} - Microdatos} : Cantidad de datos pequeños y específicos, generalmente obtenidos en periodos cortos. Útiles para decisiones diarias}
-    \item {\textbf{\textit{Big Data} - Macrodatos} : Cantidad de datos grandes y menos específicos, generalmente obtenidos a través de periodos largos
-    \begin{itemize}
-        \item {\paragraph{Desafíos : }
-        \begin{itemize}
-            \item {Sobrecarga de datos, información sin relevancia o importancia}
-            \item {Datos importantes ocultos por datos no relevantes. Esto puede provocar demoras e ineficiencias en la toma de decisiones}
-            \item {Los datos no siempre son fácilmente accesibles}
-            \item {Debido al tamaño, no todas las soluciones tecnológicas pueden trabajar con macrodatos. Esto puede llevar a sesgos algorítmicos}
-        \end{itemize}}
-        \item {\paragraph{Beneficios}
-        \begin{itemize}
-            \item {Al almacenar y analizar grandes cantidades de datos, se pueden identificar formas más eficientes para llevar a cabo negocios y proyectos} 
-            \item {Permiten detectar tendencias y patrones debido al periodo de tiempo en que son generados}
-            \item {Presentan una comprensión más amplia del problema, lo que puede usarse para mantenerse por delante de la competencia}
-        \end{itemize}}
-        \item {\paragraph{Cuatro 'V' para resumir Beneficios y Desafíos}
-        \begin{description}
-            \item[Volumen] : Cantidad de datos
-            \item[Variedad] : Diferentes tipos de datos
-            \item[Velocidad] : Qué tan rápido se pueden procesar los datos
-            \item[Veracidad] : Calidad y fiabilidad de los datos
-        \end{description}}
-    \end{itemize}}
-\end{itemize}
-
-\begin{table}
-    \centering
-    \begin{tabular}{|p{7cm}|p{7cm}|}
-        \hline
-        \multicolumn{2}{|c|}{Diferencias} \\
-        \hline
-        \textbf{\textit{Small Data}} & \textbf{\textit{Big Data}} \\
-        \hline
-        \begin{description}
-            \item {Conjunto de datos de métricas específicas, generados durante un periodo de tiempo corto y definido}
-            \item {Generalmente se trabajan en hojas de cálculo}
-            \item {Es probable que los utilicen pequeñas y medianas empresas}
-            \item {Fáciles de recopilar, almacenar, trabajar y representar visualmente}
-            \item {Tamaño manejable para análisis}
-        \end{description} & \begin{description}
-            \item {Conjunto de datos más amplio, menos específico, que cubre periodos de tiempo más extensos}
-            \item {Generalmente se mantienen en DB}
-            \item {Es probable que lo utilicen grandes organizaciones}
-            \item {Requiere mucho esfuerzo para recopilar, almacenar, administrar, clasificar y representar visualmente}
-            \item {Se deben dividir en porciones más pequeñas antes de organizar y analizarlos}
-        \end{description} \\
-        \hline
-    \end{tabular}
-\end{table}
+\begin{description}
+    \item {\textbf{\textit{Small Data} - Microdatos} : Conjunto de datos pequeños o de métricas específicas, generados durante un periodo de tiempo corto y definido. Generalmente se trabajan en hojas de cálculo y son útiles para decisiones diarias, pequeñas y medianas empresas. Tienen un tamaño manejable para el análisis}
+    \item {\textbf{\textit{Big Data} - Macrodatos} : Conjunto de datos más amplio, menos específico, que cubre periodos de tiempo más extensos. Generalmente se mantienen en bases de datos y es probable que los utilicen organizaciones grandes, debido a que requieren más esfuerzo para recopilar, almacenar, clasificar y representar visualmente
+    \begin{description}
+        \item {\textbf{Desafíos} : Hay una sobrecarga de datos, con información sin relevancia o importancia, por lo que la información importante se oculta entre datos no relevantes. No siempre son de fácil acceso y debido a su tamaño, no todos los \textit{hardware/software} pueden trabajar con ellos, creando un sesgo algorítmico}
+        \item {\textbf{Beneficios} : Como la cantidad de datos almacenada es grande, su análisis es más eficiente y permite detectar tendencias y patrones debido al periodo de tiempo en que se generan. Así, presentan una comprensión más amplia del problema}
+        \item {\textbf{Cuatro 'V' para resumir Beneficios y Desafíos} : \textit{Volumen} (cantidad de datos), \textit{Variedad} (tipos diferentes de datos), \textit{Velocidad} (qué tan rápido se procesan los datos), \textit{Veracidad} (calidad y fiabilidad de los datos)}
+    \end{description}}
+\end{description}
 \newpage
-
