--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -194,6 +194,19 @@
     description = {Porcentaje que indica cuántos centavos/pesos de ganancia se generaron por cada dólar de venta}
 }
 
+\newglossaryentry{alctrab}{
+    name = Alcance de Trabajo,
+    sort = {alcance},
+    description = {Esquema previamente acordado sobre el trabajo a realizar en un proyecto, estableciendo las expectativas y límites. Algunos contenidos básicos son entregables, hitos, cronogramas e informes}
+}
+
+\newglossaryentry{decltrab}{
+    name = Declaración de Trabajo,
+    sort = {declaracion},
+    description = {Documento que identifica claramente los productos y servicios que un proveedor o contratista proporciona a una organización. Incluye elementos como objetivos, directrices, programas y costos. \textit{no es lo mismo que el alcance : este puede ser parte de la declaración}}
+}
+
+
 
 
 \glsaddallunused
